--- a/index.html
+++ b/index.html
@@ -10,7 +10,33 @@
     
 </head>
 <body>
+    <div class="display">
+
+    </div>
+   <header class="header"> 
+    
+    <div class="players">
+        <div class="player1">
+            <div class="score"></div>
+        </div>
+        <div class="player2">
+            <div class="score"></div>
+        </div>
+    </div>
     <h1>Tik Tac Toe</h1>
-    <div class="gameboard"></div>
+
+</header>
+
+    <div class="gameboard">
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+    </div>
 </body>
 </html>
